--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
     </dependencyManagement>
 
     <dependencies>
+        <!-- Runtime related dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -65,6 +66,13 @@
             <artifactId>lombok</artifactId>
             <version>1.18.18</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
 
         <!-- Test related dependencies -->
         <dependency>
@@ -109,6 +117,14 @@
                         <includeTags>integration</includeTags>
                     </properties>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>verify</goal>
+                            <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -122,6 +138,7 @@
                 <version>2.5.3</version>
                 <configuration>
                     <mainClass>com.neueda.assignment.urlshrinker.Application</mainClass>
+                    <classifier>exec</classifier>
                 </configuration>
                 <executions>
                     <execution>
