--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -3,3 +3,6 @@ spring:
     url: jdbc:hsqldb:mem:tes_urlshrinker;DB_CLOSE_DELAY=-1
     username: sa
     password:
+
+application:
+  baseUrl: http://localhost:8080
